--- a/index.html
+++ b/index.html
@@ -3,11 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DES 157A Portal Page</title>
+    <title>Eric's Portal Page</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BBH+Hegarty&family=Raleway&display=swap" rel="stylesheet">
+    <!-- style sheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Here is my Portal Page</h1>
-    <p>Here is a paragraph</p>
+    <div id="container">
+        <header>
+            <div class="banner">
+                <img src="images/banner-asset.svg" alt="blue-banner">
+                <div class="banner-text">
+                <h1>Eric Toscano</h1>
+                <h2>DES 157 - Interactive Media II - Winter 2026</h2>
+                </div>
+                <div id="smile"><img src="images/smile.svg" alt="smile" width="133" height="64"></div>
+                <div id="top-swoop"><img src="images/swoop-top.svg" alt="top-swoop" width="296" height="151"></div>
+                <div id="alright"><img src="images/alright.svg" alt="alright" width="195" height="101"></div>
+            </div>
+        </header>
+        <main>
+            <section id="box1">
+                <h3>Research</h3>
+                    <ul>
+                        <li><a href="#">Learning Journal</a></li>
+                        <li><a href="#">Experiment 1</a></li>
+                        <li><a href="#">Experiment 2</a></li>
+                    </ul>
+            </section>
+            <section id="box2">
+                <h3>Madlibs</h3>
+                    <ul>
+                        <li><a href="#">Design V1</a></li>
+                        <li><a href="#">Code V1</a></li>
+                        <li><a href="#">Final Madlibs</a></li>
+                        <li><a href="#">Improvements</a></li>
+                    </ul>
+            </section>
+            <section id="box3">
+                <h3>Every Picture</h3>
+                    <ul>
+                        <li><a href="#">Experimentation</a></li>
+                        <li><a href="#">Design Comp</a></li>
+                        <li><a href="#">Code V1</a></li>
+                        <li><a href="#">Final Every Picture</a></li>
+                        <li><a href="#">Improvements</a></li>
+                    </ul>
+            </section>        
+            <section id="box4">
+                <h3>Game On</h3>
+                    <ul>
+                        <li><a href="#">Design V1</a></li>
+                        <li><a href="#">Code V1</a></li>
+                        <li><a href="#">Final Game On</a></li>
+                    </ul>
+            </section>   
+        </main>
+        <footer>
+            <div class="footer-banner">
+                <img src="images/footer.svg" alt="blue-footer">
+                <div class="footer-banner-text">
+                    <p>Toscano, Eric | &#101;&#114;&#116;&#111;&#115;&#099;&#097;&#110;&#111;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;</p>
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
