--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h3>Research</h3>
                     <ul>
                         <li><a href="#">Learning Journal</a></li>
-                        <li><a href="#">Experiment 1</a></li>
+                        <li><a href="exp/exp1.html">Experiment 1</a></li>
                         <li><a href="#">Experiment 2</a></li>
                     </ul>
             </section>
