--- a/exp/exp1.html
+++ b/exp/exp1.html
@@ -11,8 +11,14 @@
     <script>
         //A Loop that declares variable u is the string '#'. The second part tests whether or not the the character length of the variable u value is less than or equal to 7. The last part of the loop adds another '#' to the string of u. This loop will run until the character length of u reaches 7.
         for(u='#'; u.length <=7; u+='#'){
+            if(u.length<=5){
+                console.log(`${u}We are half way`);
+            }   
             console.log(u);
         }
+        
+     
+
 
     </script>
 </body>
