--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <section id="box1">
                 <h3>Research</h3>
                     <ul>
-                        <li><a href="#">Learning Journal</a></li>
+                        <li><a href="journal/images/sketch-journal.jpg">Learning Journal Sketch</a></li>
+                        <li><a href="journal/index.html">Learning Journal</a></li>
                         <li><a href="exp/exp1.html">Experiment 1</a></li>
                         <li><a href="#">Experiment 2</a></li>
                     </ul>
