--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section id="box2">
                 <h3>Madlibs</h3>
                     <ul>
-                        <li><a href="#">Design V1</a></li>
+                        <li><a href="madlibs/index.html">Design V1</a></li>
                         <li><a href="#">Code V1</a></li>
                         <li><a href="#">Final Madlibs</a></li>
                         <li><a href="#">Improvements</a></li>
